@startuml ViewLastLiftClassDiagram
abstract class Command {
    + execute(Storage, WorkoutList, Ui, UserProfile): void
    + isExit(): boolean
}

class ViewLastLiftCommand {
    - exerciseId: String
    + execute(Storage, WorkoutList, Ui, UserProfile): void
}

class WorkoutList {
    + getSize(): int
    + getWorkoutAtIndex(int): Workout
}

class StrengthWorkout {
    + getWeight(): double
    + getSets(): int
    + getReps(): int
}

class Ui {
    + showLastLift(StrengthWorkout): void
    + showMessage(String): void
}

Command <|-- ViewLastLiftCommand
ViewLastLiftCommand --> WorkoutList : reads >
ViewLastLiftCommand --> Ui : uses >
WorkoutList --> StrengthWorkout : contains >
@enduml